# DailySongRecommender

./: .env.example  .gitignore  Dockerfile  README.md  audio_features.py  cli.py  config.py  email_service.py  entrypoint.sh  manage.py  pyproject.toml  recommender.py  requirements.txt  scheduler.py
agents/: orchestrator.py  profiler.py  recommendation_agent.py
core/: database.py  spotify_auth.py
dailysongrecommender/: asgi.py  settings.py  urls.py  wsgi.py
mcp_servers/: email_server.py  spotify_server.py
recommender/: cron.py  email_service.py  song_recommender.py
